# Repo-Insight

./: .env.example  .gitignore  .mcp.json  =0.19.0  DROPLET_GUIDE.md  Dockerfile  HACKATHON_STATUS.md  PROJECT_ANALYSIS.md  README.md  agent.py  app.py  apply_changes.py  change_engine.py  compare_results.py  config.py  demo_cli.py  docker-compose.yml  embedder.py  fingerprinting.py  git_tools.py  graph_health.py  graph_index.py  implementation_plan.md  ingest.py  litellm_config.yaml  mcp_server.py  parser.py  pyproject.toml  pytest.ini  requirements.txt  resolver.py  run_swebench.py  run_swebench_ccli.py  run_swebench_claude.py  sandbox.py  scoring.py  session-ses_215b.md  tools.py  watcher.py
.Bob/: mcp.json
.claude/: mcp.json  settings.json
scripts/: post-commit
tests/: test_agent.py  test_apply_changes.py  test_change_engine.py  test_embedder.py  test_fingerprinting.py  test_git_tools.py  test_ingest.py  test_parser.py  test_resolver.py  test_scoring.py  test_tools.py
tests/fixtures/: all_exporter.py  caller_module.py  config_fixture.py  config_unused_fixture.py  config_user_fixture.py  deep_chain.py  module_attr_reader.py  nested_classes.py  pkg_caller.py  resolution_caller.py  resolution_target.py  simple_module.py  star_exporter.py  star_importer.py  super_caller.py
tests/fixtures/alias_init/: __init__.py  impl.py
tests/fixtures/pkg/: __init__.py  animals.py
